--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,12 +1,20 @@
 astroid==2.3.3
+autopep8==1.4.4
+Django==2.2.9
+Faker==4.0.1
 isort==4.3.21
 lazy-object-proxy==1.4.3
-lorem==0.1.1
 mccabe==0.6.1
 numpy==1.18.1
-pandas==0.25.3
+pandas==1.0.1
+Pillow==6.2.1
+pkg-resources==0.0.0
+pycodestyle==2.5.0
 pylint==2.4.4
 python-dateutil==2.8.1
 pytz==2019.3
-six==1.14.0
+six==1.13.0
+sqlparse==0.3.0
+text-unidecode==1.3
+typed-ast==1.4.1
 wrapt==1.11.2
