--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,32 @@
+asgiref==3.2.3
 astroid==2.3.3
 autopep8==1.4.4
-Django==2.2.10
+certifi==2019.11.28
+chardet==3.0.4
+dj-database-url==0.5.0
+Django==2.2.11
+django-heroku==0.3.1
+Faker==4.0.1
+gunicorn==20.0.4
+heroku==0.1.4
+idna==2.9
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+numpy==1.18.1
+pandas==1.0.1
 Pillow==6.2.1
+psycopg2==2.8.4
 pycodestyle==2.5.0
 pylint==2.4.4
+python-dateutil==1.5
+python-decouple==3.3
 pytz==2019.3
+requests==2.23.0
 six==1.13.0
 sqlparse==0.3.0
+text-unidecode==1.3
+typed-ast==1.4.1
+urllib3==1.25.8
+whitenoise==5.0.1
 wrapt==1.11.2
