--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -7,7 +7,7 @@ lazy-object-proxy==1.4.3
 mccabe==0.6.1
 numpy==1.18.1
 pandas==1.0.1
-Pillow==6.2.22pkg-resources==0.0.0
+Pillow==6.2.22
 pycodestyle==2.5.0
 pylint==2.4.4
 python-dateutil==2.8.1
