Add all required packages for injector

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,73 @@
+# The following was added 10 June 2020
+Django==2.2.13
+alabaster==0.7.12
+appdirs==1.4.4
 asgiref==3.2.3
 astroid==2.3.3
+attrs==19.3.0
 autopep8==1.4.4
+Babel==2.8.0
+blessings==1.7
+bpython==0.19
 certifi==2019.11.28
 chardet==3.0.4
+click==7.1.2
+curtsies==0.3.1
+dacite==1.5.0
 dj-database-url==0.5.0
-Django==2.2.13
 django-heroku==0.3.1
+docutils==0.16
+Faker==4.0.3
+fancycompleter==0.9.1
+flake8==3.8.1
+greenlet==0.4.15
 gunicorn==20.0.4
 heroku==0.1.4
 idna==2.9
+imagesize==1.2.0
 isort==4.3.21
+jedi==0.17.0
+Jinja2==2.11.2
 lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
 mccabe==0.6.1
+numpy==1.18.4
+packaging==20.3
+pandas==1.0.3
+parso==0.7.0
+pathtools==0.1.2
+pdbpp==0.10.2
 Pillow==6.2.2
+prompt-toolkit==3.0.5
 psycopg2==2.8.4
-pycodestyle==2.5.0
+ptpython==3.0.2
+pycodestyle==2.6.0
+pyflakes==2.2.0
+Pygments==2.6.1
 pylint==2.4.4
-python-dateutil==1.5
+pyparsing==2.4.7
+pyrepl==0.9.0
+python-dateutil==2.8.1
 python-decouple==3.3
 pytz==2019.3
 requests==2.23.0
 six==1.13.0
+snowballstemmer==2.0.0
+Sphinx==3.0.3
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
 sqlparse==0.3.0
 text-unidecode==1.3
+toml==0.10.1
 typed-ast==1.4.1
 urllib3==1.25.8
+watchdog==0.10.2
+wcwidth==0.1.9
 whitenoise==5.0.1
+wmctrl==0.3
 wrapt==1.11.2
-click==7.1.2
+
