--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,10 @@ contextlib2==0.6.0
 distlib==0.3.0
 distro==1.4.0
 dj-database-url==0.5.0
-Django==2.2.13
-django-heroku==0.3.1
-gunicorn==20.0.4
-heroku==0.1.4
+Django==2.2.13 # need this one
+django-heroku==0.3.1 # need this one
+gunicorn==20.0.4 # need this one
+heroku==0.1.4 # need this one
 html5lib==1.0.1
 idna==2.9
 ipaddr==2.2.0
@@ -24,9 +24,9 @@ mccabe==0.6.1
 msgpack==0.6.2
 packaging==20.3
 pep517==0.8.2
-Pillow==7.1.0
+Pillow==7.1.0 # need this one
 progress==1.5
-psycopg2==2.8.4
+psycopg2==2.8.4 # need this one
 pycodestyle==2.5.0
 pylint==2.4.4
 pyparsing==2.4.6
@@ -34,7 +34,7 @@ python-dateutil==1.5
 python-decouple==3.3
 python-dotenv==0.15.0
 pytoml==0.1.21
-pytz==2019.3
+pytz==2019.3 # need this one
 requests==2.23.0
 retrying==1.3.3
 six==1.14.0
@@ -43,5 +43,5 @@ text-unidecode==1.3
 typed-ast==1.4.1
 urllib3==1.25.8
 webencodings==0.5.1
-whitenoise==5.0.1
+whitenoise==5.0.1 # need this one
 wrapt==1.11.2
