--- a/requirements.txt
+++ b/requirements.txt
@@ -101,3 +101,5 @@ whitenoise==5.2.0
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
+django-extensions 
+Werkzeug
