--- a/requirements.in
+++ b/requirements.in
@@ -7,7 +7,7 @@ dj-database-url
 django-environ
 django-heroku
 gunicorn
-heroku
+heroku3
 idna
 iniconfig
 Pillow
@@ -15,7 +15,7 @@ pluggy
 psycopg2
 py
 pytest
-python-dateutil
+python-dateutil>2.8
 python-decouple
 python-dotenv
 pytz
