--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ asgiref==3.5.2
     # via
     #   -r requirements.in
     #   django
-attrs==21.4.0
+attrs==22.1.0
     # via
     #   -r requirements.in
     #   pytest
@@ -20,20 +20,21 @@ chardet==5.0.0
     # via -r requirements.in
 charset-normalizer==2.1.0
     # via requests
-dj-database-url==0.5.0
+dj-database-url==1.0.0
     # via
     #   -r requirements.in
     #   django-heroku
-django==3.2.14
+django==3.2.15
     # via
     #   -r requirements.in
+    #   dj-database-url
     #   django-extensions
     #   django-heroku
 django-analytical==3.1.0
     # via -r requirements.in
 django-environ==0.9.0
     # via -r requirements.in
-django-extensions==3.1.5
+django-extensions==3.2.0
     # via -r requirements.in
 django-heroku==0.3.1
     # via -r requirements.in
@@ -77,7 +78,7 @@ python-decouple==3.6
     # via -r requirements.in
 python-dotenv==0.20.0
     # via -r requirements.in
-pytz==2022.1
+pytz==2022.2.1
     # via
     #   -r requirements.in
     #   django
@@ -95,7 +96,7 @@ toml==0.10.2
     # via -r requirements.in
 tomli==2.0.1
     # via pytest
-urllib3==1.26.10
+urllib3==1.26.11
     # via
     #   -r requirements.in
     #   requests
