--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,8 @@ django-extensions==3.2.1
     # via -r requirements.in
 django-heroku==0.3.1
     # via -r requirements.in
+exceptiongroup==1.0.1
+    # via pytest
 gunicorn==20.1.0
     # via -r requirements.in
 heroku3==5.1.4
@@ -52,23 +54,19 @@ iniconfig==1.1.1
     #   pytest
 packaging==21.3
     # via pytest
-pillow==9.2.0
+pillow==9.3.0
     # via -r requirements.in
 pluggy==1.0.0
     # via
     #   -r requirements.in
     #   pytest
-psycopg2==2.9.4
+psycopg2==2.9.5
     # via
     #   -r requirements.in
     #   django-heroku
-py==1.11.0
-    # via
-    #   -r requirements.in
-    #   pytest
 pyparsing==3.0.9
     # via packaging
-pytest==7.1.3
+pytest==7.2.0
     # via -r requirements.in
 python-dateutil==2.8.2
     # via
@@ -78,7 +76,7 @@ python-decouple==3.6
     # via -r requirements.in
 python-dotenv==0.21.0
     # via -r requirements.in
-pytz==2022.5
+pytz==2022.6
     # via
     #   -r requirements.in
     #   django
