--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 *.pem
-# migrations
+migrations
 /static
 /media
 # staticfiles
@@ -64,7 +64,7 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
-*.sqlite3
+*.sqlite3*
 *.bak
 
 # Flask stuff:
