--- a/requirements.txt
+++ b/requirements.txt
@@ -64,6 +64,8 @@ psycopg2==2.9.5
     # via
     #   -r requirements.in
     #   django-heroku
+py==1.11.0
+    # via -r requirements.in
 pyparsing==3.0.9
     # via packaging
 pytest==7.2.0
