--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,9 @@ asgiref==3.7.2
     # via
     #   -r requirements.in
     #   django
-attrs==23.1.0
+attrs==23.2.0
     # via -r requirements.in
-certifi==2023.7.22
+certifi==2024.2.2
     # via
     #   -r requirements.in
     #   requests
@@ -22,7 +22,7 @@ dj-database-url==2.1.0
     # via
     #   -r requirements.in
     #   django-heroku
-django==3.2.23
+django==3.2.25
     # via
     #   -r requirements.in
     #   dj-database-url
@@ -40,7 +40,7 @@ gunicorn==21.2.0
     # via -r requirements.in
 heroku3==5.2.1
     # via -r requirements.in
-idna==3.4
+idna==3.6
     # via
     #   -r requirements.in
     #   requests
@@ -48,13 +48,13 @@ iniconfig==2.0.0
     # via
     #   -r requirements.in
     #   pytest
-packaging==23.2
+packaging==24.0
     # via
     #   gunicorn
     #   pytest
-pillow==10.1.0
+pillow==10.2.0
     # via -r requirements.in
-pluggy==1.3.0
+pluggy==1.4.0
     # via
     #   -r requirements.in
     #   pytest
@@ -64,17 +64,17 @@ psycopg2==2.9.9
     #   django-heroku
 py==1.11.0
     # via -r requirements.in
-pytest==7.4.3
+pytest==8.1.1
     # via -r requirements.in
-python-dateutil==2.8.2
+python-dateutil==2.9.0.post0
     # via
     #   -r requirements.in
     #   heroku3
 python-decouple==3.8
     # via -r requirements.in
-python-dotenv==1.0.0
+python-dotenv==1.0.1
     # via -r requirements.in
-pytz==2023.3.post1
+pytz==2024.1
     # via
     #   -r requirements.in
     #   django
@@ -90,9 +90,9 @@ sqlparse==0.4.4
     #   django
 toml==0.10.2
     # via -r requirements.in
-typing-extensions==4.8.0
+typing-extensions==4.10.0
     # via dj-database-url
-urllib3==2.0.7
+urllib3==2.2.1
     # via
     #   -r requirements.in
     #   requests
